--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- Normalize -->
-		<link
-			rel="stylesheet"
-			href="node_modules/modern-normalize/modern-normalize.css"
-		/>
 		<!-- Font -->
 		<link
 			href="https://api.fontshare.com/v2/css?f[]=general-sans@500,300,600,400,700&display=swap"
@@ -17,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	</head>
-	<body id="body">
+	<body>
 		<app-root></app-root>
 	</body>
 </html>
